Stop space animation from overflowing document and adjust colors for the gameboards

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -121,19 +121,20 @@ body {
 }
 
 .gameboard-header {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: 400;
-  color: #d9f99d;
+  color: #a3e635;
 }
 
 .gameboard {
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  padding: 3px;
-  margin-top: 8px;
+  padding: 4px;
+  margin-top: 10px;
   width: clamp(100px, 50%, 700px);
-  box-shadow: 0 0 10px #a3e635, 0 0 20px #ecfccb, 0 0 40px #ecfccb;
+  box-shadow: 0 0 5px #a3e635, 0 0 7px #a3e635, 0 0 10px #ecfccb,
+    0 0 15px #ecfccb;
 }
 
 .row {
@@ -148,7 +149,6 @@ body {
   padding-top: 10%;
   background-color: transparent;
   box-sizing: border-box;
-  box-shadow: inset 0 0 20px #a3e635;
 }
 
 .add-ship-prompt,
@@ -166,7 +166,6 @@ label {
     text-shadow: 0 0 5px #bef264, 0 0 10px #84cc16, 0 0 15px #84cc16,
       0 0 20px #84cc16;
   }
-
   to {
     text-shadow: 0 0 2px #bef264, 0 0 4px #a3e635, 0 0 8px #a3e635,
       0 0 10px #a3e635, 0 0 20px #a3e635, 0 0 40px #a3e635, 0 0 60px #a3e635;
@@ -180,6 +179,9 @@ label {
   box-shadow: none;
 }
 
+.grid {
+  background-color: rgb(163, 230, 53, 0.6);
+}
 .ship:not(.computer) {
   background-color: #7c3aed;
 }
@@ -200,7 +202,7 @@ label {
   background: transparent center / 200px 200px round;
   bottom: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   overflow: hidden;
